--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,54 +2,50 @@
 name: Deploy Vite Project to GitHub Pages
 
 on:
-  # Runs on pushes to the main branch
   push:
     branches: ["main"]
 
-  # Allows you to manually run this workflow
   workflow_dispatch:
 
-# Permissions for GITHUB_TOKEN
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Concurrency settings
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout the repository
         uses: actions/checkout@v4
 
-      # Install Node.js and set up the environment
+      # Step 2: Setup Node.js environment
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16  # Make sure to use Node.js version supported by Vite
+          node-version: 16  # Ensure a compatible version of Node.js
 
-      # Install dependencies
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: npm install
 
-      # Build the Vite project
+      # Step 4: Build the project using Vite
       - name: Build the project
-        run: npm run dev
+        run: npx vite build
 
-      # Upload the built files in the `dist` folder to GitHub Pages
+      # Step 5: Upload the built `dist` folder for GitHub Pages deployment
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './dist'  # Deploy the 'dist' folder
+          path: './dist'  # Deploy the contents of the `dist` folder
 
-      # Deploy to GitHub Pages
+      # Step 6: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
